@@ -1,5 +1,5 @@
 Package: ggmap
-Version: 2.7.900
+Version: 2.7.901
 Title: Spatial Visualization with ggplot2
 Description: A collection of functions to visualize spatial data and models
     on top of static maps from various online sources (e.g Google Maps and Stamen
