@@ -30,10 +30,20 @@ export(goog_day_limit)
 export(goog_key)
 export(goog_second_limit)
 export(goog_signature)
+export(google_account)
+export(google_client)
+export(google_day_limit)
+export(google_key)
+export(google_second_limit)
+export(google_signature)
 export(has_goog_account)
 export(has_goog_client)
 export(has_goog_key)
 export(has_goog_signature)
+export(has_google_account)
+export(has_google_client)
+export(has_google_key)
+export(has_google_signature)
 export(inset)
 export(inset_ggmap)
 export(inset_raster)
