@@ -114,11 +114,11 @@ trek <- function(from, to, mode = c("driving","walking","bicycling", "transit"),
   )
 
   # add google account stuff
-  if (has_goog_client() && has_goog_signature()) {
+  if (has_google_client() && has_google_signature()) {
     client <- goog_client()
     signature <- goog_signature()
     posturl <- paste(posturl, fmteq(client), fmteq(signature), sep = "&")
-  } else if (has_goog_key()) {
+  } else if (has_google_key()) {
     key <- goog_key()
     posturl <- paste(posturl, fmteq(key), sep = "&")
   }
