@@ -1,3 +1,12 @@
+ggmap **
+-------------------------------------------------------------------------
+
+CHANGES
+
+* has_goog*() functions are now has_google*(); the former are .Deprecated().
+
+
+
 ggmap 2.7
 -------------------------------------------------------------------------
 
